<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/main06"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/edit"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/auditstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginRight="@dimen/left"
            android:gravity="center"
            android:text="@string/state1"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/TitelSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/maintaintime"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="："
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/maintaintime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/left"
            android:paddingRight="@dimen/left"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/abbreviation"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="："
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/abbreviation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/left"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:lines="1"
            android:paddingLeft="@dimen/left"
            android:paddingRight="@dimen/left"

            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="："
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/left"
            android:paddingRight="@dimen/left"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/maintainpeople"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="："
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/maintainpeople"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/left"
            android:paddingRight="@dimen/left"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/summary"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:background="@mipmap/handsign"
        android:gravity="top"
        android:paddingLeft="@dimen/left"
        android:paddingRight="@dimen/left"
        android:paddingTop="10dp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/handsign"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textSize" />

    <ImageView
        android:id="@+id/handsign"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:background="@mipmap/handsign"
        android:scaleType="fitXY" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/picture"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textSize" />

    <com.liuzhen.mylibrary.Utils.NoScrollView.NoScrollGridView
        android:id="@+id/pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:cacheColorHint="#00000000"
        android:horizontalSpacing="5dp"
        android:listSelector="#00000000"
        android:layout_marginBottom="10dp"
        android:numColumns="3"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" />
</LinearLayout>