<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/maintaintime"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="："
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/maintaintime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/left"
            android:paddingRight="@dimen/left"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/maintainpeople"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="："
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/maintainpeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/left"
            android:paddingRight="@dimen/left"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/handsign"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textSize" />

    <ImageView
        android:id="@+id/handsign"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="@dimen/left"
        android:background="@mipmap/handsign"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/summary"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textSize" />


    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/picture"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/textSize" />

    <com.liuzhen.mylibrary.Utils.NoScrollView.NoScrollGridView
        android:id="@+id/pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/left"
        android:layout_marginTop="10dp"
        android:cacheColorHint="#00000000"
        android:horizontalSpacing="5dp"
        android:listSelector="#00000000"
        android:numColumns="3"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp" />


</LinearLayout>