<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main06"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.jzd.artbeatsnature.Activity.ChangeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:orientation="horizontal"
        android:padding="@dimen/left">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/back"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/changepsd"
            android:textColor="@color/white"
            android:textSize="@dimen/TitelSize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerInside"
            android:src="@mipmap/login1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:background="@mipmap/login2"
            android:paddingLeft="20dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login3" />

            <EditText
                android:id="@+id/oldpsd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/old_hint"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/mainColor"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@mipmap/login2"
            android:paddingLeft="20dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login4" />

            <EditText
                android:id="@+id/newpsd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/new_hint"
                android:paddingLeft="12dp"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textColorHint="@color/mainColor"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@mipmap/login2"
            android:paddingLeft="20dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login4" />

            <EditText
                android:id="@+id/confirmpwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/confirm_hint"
                android:paddingLeft="12dp"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textColorHint="@color/mainColor"
                android:textSize="@dimen/textSize" />
        </LinearLayout>


        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@mipmap/button"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

    </LinearLayout>
</LinearLayout>
