<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg"
    android:gravity="center_horizontal"
    tools:context="com.jzd.artbeatsnature.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerInside"
            android:src="@mipmap/login1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:background="@mipmap/login2"
            android:paddingLeft="20dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login3" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/username_hint"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/mainColor"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:background="@mipmap/login2"
            android:paddingLeft="20dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/login4" />

            <EditText
                android:id="@+id/pasword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/pasword_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/mainColor"
                android:textSize="@dimen/textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remenberpsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/remenberpsw"
                android:gravity="right"
                android:text="@string/remenber"
                android:textColor="@color/mainColor" />
        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@mipmap/button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

    </LinearLayout>


</LinearLayout>
